[gd_scene load_steps=5 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://src/main.gd" id="1_main"]
[ext_resource type="Script" path="res://src/input_manager.gd" id="2_input"]

[sub_resource type="LabelSettings" id="1"]
font_size = 24
font_color = Color(1, 1, 1, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node"]
script = ExtResource("1_main")

[node name="InputManager" type="Node" parent="."]
script = ExtResource("2_input")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TrackingStatus" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
text = "Tracking: Initializing..."
label_settings = SubResource("1")

[node name="DebugInfo" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 70.0
offset_right = 400.0
offset_bottom = 200.0
text = "Debug info will appear here"
label_settings = SubResource("1")
